GNOME Bugzilla – Bug 667780
nautilus-sendto does not respect default email client
Last modified: 2012-03-14 15:31:44 UTC
Description of problem: nautilus-sendto does not respect default email client Version-Release number of selected component (if applicable): nautilus-sendto-3.0.1-1.fc16.x86_64 How reproducible: always Steps to Reproduce: 1. install thunderbird 2. set thunderbird to default mail client in gnome 3 3. try to send a file by mail by right click -> send to Actual results: evolution starts Expected results: thunderbird starts Additional info:
(In reply to comment #0) > 2. set thunderbird to default mail client in gnome 3 Just to be sure, you set this under "System Settings > System > System Info > Default Applications > Mail"? Or how?
yep, thats correct
True. We still get the default mailer from GConf.
Fixed in gnome-3-0 and master commit fb9359354d10d8393affe4181a5773cdc3902d88 Author: Bastien Nocera <hadess@hadess.net> Date: Wed Mar 14 16:26:41 2012 +0100 evolution: Fix getting default mailer for GNOME 3.0 Using the handler for x-scheme-handler/mailto rather than reading obsolete info in GConf. https://bugzilla.gnome.org/show_bug.cgi?id=667780