evolution: Fix getting default mailer for GNOME 3.0

Using the handler for x-scheme-handler/mailto rather than
reading obsolete info in GConf.

https://bugzilla.gnome.org/show_bug.cgi?id=667780